update na estilização

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>Pokemons</h1>
+    <h1>Pokémon</h1>
     <div class="pokeBox" id="pokeBox">
 
         <div class="pokemon">
@@ -23,7 +23,7 @@
             <div class="sobre">
                 <span class="number">#1</span>
                 <h2 class="name">Bulbasaur</h2>
-                <span class="type">Grama</span>
+                <span class="type">Tipo: Grama</span>
             </div>
         </div>
 
@@ -37,7 +37,7 @@
             <div class="sobre">
                 <span class="number">#2</span>
                 <h2 class="name">Ivysaur</h2>
-                <span class="type">Grama</span>
+                <span class="type">Tipo: Grama</span>
             </div>
         </div>
 
@@ -50,7 +50,7 @@
             <div class="sobre">
                 <span class="number">#3</span>
                 <h2 class="name">Venusaur</h2>
-                <span class="type">Grama</span>
+                <span class="type">Tipo: Grama</span>
             </div>
         </div>
 
@@ -63,7 +63,7 @@
             <div class="sobre">
                 <span class="number">#4</span>
                 <h2 class="name">Charmander</h2>
-                <span class="type">Fogo</span>
+                <span class="type">Tipo: Fogo</span>
             </div>
         </div>
     </div>
