search e udp css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 </head>
 
 <body>
+
+    
+
     <h1>Pokémon</h1>
+
+
+    <div class="search-bar">
+        <input type="text" id="searchInput" placeholder="Buscar por nome ou ID">
+        <button onclick="searchPokemon()">Buscar</button>
+    </div>
+
+
     <div class="pokeBox" id="pokeBox">
 
     </div>
