árvore de evoluçao

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
             <span class="close" onclick="closeModal()">&times;</span>
             <div class="pokemon-info" id="pokemonInfo"></div>
             <div class="moves-list" id="movesList"></div>
+            <div class="evolution-list" id="evolutionList"></div>
         </div>
     </div>
     
-    
+
     <h1>Pokedex</h1>
 
 
